@@ -15,3 +15,5 @@ Module - Inventory
 =======================================================================================
 
 Module - Clinical
+
+* CHANGE (Eventum #436) - Added value 'Pager' to the Telephone Type field lookup list.
